<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/MainActivityTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:text="@string/my_tasks"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

<!--    <ImageView-->
<!--        android:id="@+id/MainActivityImageView"-->
<!--        android:layout_width="294dp"-->
<!--        android:layout_height="364dp"-->
<!--        android:layout_marginTop="60dp"-->
<!--        android:contentDescription="@string/main_activity_img"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/MainActivityTextView"-->
<!--        app:srcCompat="@drawable/ic_launcher_background"-->
<!--        tools:ignore="ImageContrastCheck" />-->

    <Button
        android:id="@+id/MainActivityAddTaskButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:text="@string/add_task"
        app:layout_constraintEnd_toStartOf="@+id/MainActivityAllTasksButton"
        app:layout_constraintHorizontal_bias="0.432"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MainActivityTaskRecyclerView" />

    <Button
        android:id="@+id/MainActivityAllTasksButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="64dp"
        android:text="@string/all_tasks"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MainActivityTaskRecyclerView" />

    <ImageView
        android:id="@+id/MainActivitySettingsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="24dp"
        android:background="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_manage" />

<!--    <Button-->
<!--        android:id="@+id/MainActivityViewTaskOneButton"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="60dp"-->
<!--        android:minWidth="240dp"-->
<!--        android:text="@string/taskOne"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="@+id/MainActivityImageView" />-->

<!--    <Button-->
<!--        android:id="@+id/MainActivityViewTaskTwoButton"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="32dp"-->
<!--        android:minWidth="240dp"-->
<!--        android:text="@string/taskTwo"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/MainActivityViewTaskOneButton" />-->

<!--    <Button-->
<!--        android:id="@+id/MainActivityViewTaskThreeButton"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="32dp"-->
<!--        android:minWidth="240dp"-->
<!--        android:text="@string/taskThree"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/MainActivityViewTaskTwoButton" />-->

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/MainActivityTaskRecyclerView"
        android:layout_width="296dp"
        android:layout_height="480dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MainActivityTextView" />

</androidx.constraintlayout.widget.ConstraintLayout>